--- a/yamls/03-deployment.yaml
+++ b/yamls/03-deployment.yaml
@@ -1,12 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: backend-springboot-rest-configmap
-data:
-  # MongoDB URI
-  # MONGODB_URI: mongodb://host.docker.internal/SpringProducts
-  MONGODB_URI: "mongodb://mongo-0.mongo,mongo-1.mongo,mongo-2.mongo:27017/SpringProducts"
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,7 +16,7 @@ spec:
     spec:
       containers:
         - name: backend-springboot-rest-mongodb-starter
-          image: hanymichael/backend-springboot-rest-mongodb-starter:v1
+          image: hanymichael/backend-springboot-rest-mongodb-starter
           ports:
             - containerPort: 8080
           env:
@@ -34,18 +25,3 @@ spec:
                 configMapKeyRef:
                   name: backend-springboot-rest-configmap
                   key: MONGODB_URI
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend-springboot-rest-svc
-spec:
-  type: LoadBalancer
-  ports:
-    - port: 80
-      #   nodePort: 30102
-      targetPort: 8080
-      protocol: TCP
-      name: http
-  selector:
-    app: backend-springboot-rest
